<?xml version="1.0"?>
<package format="3">
  <name>upperlimb_robot</name>
  <version>0.0.1</version>
  <description>Custom ROS 2 interfaces for upperlimb robot.</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 接口生成 -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 你的 msg 如果用到了这些基础类型，就保留 -->
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- 运行时接口支持 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 这是接口包必须加的组声明 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
